# canvasdesk

./: .gitignore  CMakeLists.txt  CanvasDesk.txt  DEPENDENCIES.txt  PHASE_3_ROADMAP.md  README.md  SESSION-STATE.md  TESTING-NOTES.md  UNIFIED_BINARY_PLAN.md  X11.txt  build.sh  canvasdesk-session  do.txt  help.txt  kwin-test-output.txt  layout.json  test-kwin.sh  test-window-mgmt.sh  test-x11-connection.sh  test_panel_layout.json
.cache/clangd/index/: AppManager.cpp.FC01A163B452B8F0.idx  AppManager.h.4D451FCF52B2C1A3.idx  CanvasDeskCore.cpp.BBC7273814AA0E20.idx  CanvasDeskCore.h.3071D85F6D67DE1B.idx  Component.cpp.4AF2880CBF88E657.idx  Component.h.46D1290F4CD20686.idx  LayoutManager.cpp.35F7041017341CF6.idx  LayoutManager.h.839315A8DDB9453D.idx  MonitorManager.cpp.366445071DAB3602.idx  MonitorManager.h.668B5A7688B108DE.idx  SystemMonitor.cpp.49B302B4984B0883.idx  SystemMonitor.h.A3F7E5DF1C355E7D.idx  ThemeManager.cpp.AAC6CDE0175ECD22.idx  ThemeManager.h.25B9CD4DC06391AD.idx  WindowManager.cpp.7495AB90F623D729.idx  WindowManager.h.46596AAF7DEB954E.idx  X11WindowManager.cpp.6C04A46E62D456EE.idx  X11WindowManager.h.11CDF2363E3FDF4A.idx  main.cpp.244F69D4E5259B56.idx  main.cpp.2AF46776B237C63C.idx  main.cpp.9D887A7082BF8619.idx
Docs/: CHANGELOG.md  DEPENDENCIES.txt  NEXT_SESSION_PLAN.md  QML_IDEAS.txt  README.md  WINDOW_FRAMES_REFERENCE.md  X11.txt
config/: wayfire.ini
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/core/: AppManager.cpp  AppManager.h  CMakeLists.txt  CanvasDeskCore.cpp  CanvasDeskCore.h  Component.cpp  Component.h  ExtForeignToplevelManager.cpp  ExtForeignToplevelManager.h  LayoutManager.cpp  LayoutManager.h  MonitorManager.cpp  MonitorManager.h  SystemMonitor.cpp  SystemMonitor.h  ThemeManager.cpp  ThemeManager.h  WindowManager.cpp  WindowManager.h  WlrWindowManager.cpp  WlrWindowManager.h  X11WindowManager.cpp  X11WindowManager.h
src/editor/: CMakeLists.txt  main.cpp
src/editor/qml/: ControlCenter.qml  DesktopMode.qml  EditableComponent.qml  EditorMain.qml  PopupPositionHelper.qml
src/editor/qml/components/: AppGridComponent.qml  AppLauncherComponent.qml  AtomClockComponent.qml  AtomCpuComponent.qml  AtomDiskComponent.qml  AtomRamComponent.qml  AtomSysInfoComponent.qml  ButtonComponent.qml  ClockComponent.qml  EnhancedPanelComponent.qml  FileManagerComponent.qml  MonitorArranger.qml  PanelComponent.qml  SessionManagerComponent.qml  TaskbarComponent.qml  WorkspaceSwitcherComponent.qml
src/qml/: CMakeLists.txt  Main.qml
